tests/ui/type-alias-impl-trait/different_defining_uses_never_type3.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/different_defining_uses_never_type3.rs:13:13
   |
LL | fn two() -> Tait {
   |             ^^^^ expected `One`, got `Two<()>`
   |
note: previous use here
  --> $DIR/different_defining_uses_never_type3.rs:8:5
   |
LL |     One
   |     ^^^

error: aborting due to previous error

